[project]
name = "pdfchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "langchain-community>=0.3.29",
    "ollama>=0.5.4",
    "pymupdf>=1.26.4",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
]
